--- a/Webdesign.html
+++ b/Webdesign.html
@@ -6,15 +6,65 @@
     <link rel="stylesheet" href="flex.css">
     <div class="hero-image">
         <div class="hero-text">
-            <h1
+            <h1>Hero Text</h1>
+            <p>Branding statement here</p>
         </div>
     </div>
 </head>
 
 <body>
+    <h2>Headline</h2>
+    <p>Words words words words Words words words words Words words words words Words words words words.</p>
+    <button type="button">Button green</button>
+
+    <h2>Headline</h2>
+    <p>Words words words words Words words words words Words words words words Words words words words.</p>
+    <button type="button">See details</button>
+
+    <h2>Headline</h2>
+    <p>Words words words words Words words words words Words words words words Words words words words.</p>
+    <button type="button">Button red</button>
+
+    <article>
+        <h2>Two Column Left Side</h2>
+        <p>Words words words words Words words words words Words words words words Words words words words.</p>
+        <p>Words words words words Words words words words Words words words words Words words words words.</p>
+    </article>
+
+    <article>
+        <h2>Two Column Right Side</h2>
+        <p>Words words words words Words words words words Words words words words Words words words words.</p>
+        <p>Words words words words Words words words words Words words words words Words words words words.</p>
+    </article>
+
+    <head>
+        <div class="hero-image">
+            <div class="hero-text">
+                <h3>Our Services</h3>
+                <p>Words words words words words.</p>
+            </div>
+        </div>
+    </head>
+
+    <section>
+        <h2>Column One</h2>
+        <p>Words words words words Words words words words Words words</p>
+        
+        <h2>Column Two</h2>
+        <p>Words words words words Words words words words Words words</p>
+        <button type="button">Read it</button>
+
+        <h2>Column Three</h2>
+        <p>Words words words words Words words words words Words words</p>
+
+        <h2>Column Four</h2>
+        <p>Words words words words Words words words words Words words</p>
+        <button type="button">Details</button>
+    </section>
+
+    <h2>One Big Column</h2>
+    <p>Words words words words Words words words words Words words words words Words words words words.</p>
+    <p>Words words words words Words words words words Words words words words Words words words words.</p>
     
-
-
-
     </body>
 </html>
