--- a/Webdesign.html
+++ b/Webdesign.html
@@ -14,57 +14,70 @@
 
 <body>
     <h2>Headline</h2>
-    <p>Words words words words Words words words words Words words words words Words words words words.</p>
+    <p>Words words words words words words words words words words.</p>
     <button type="button">Button green</button>
 
     <h2>Headline</h2>
-    <p>Words words words words Words words words words Words words words words Words words words words.</p>
+    <p>Words words words words words words words words words words words.</p>
     <button type="button">See details</button>
 
     <h2>Headline</h2>
-    <p>Words words words words Words words words words Words words words words Words words words words.</p>
+    <p>Words words words words  words words words words.</p>
     <button type="button">Button red</button>
 
     <article>
         <h2>Two Column Left Side</h2>
-        <p>Words words words words Words words words words Words words words words Words words words words.</p>
-        <p>Words words words words Words words words words Words words words words Words words words words.</p>
+        <p>Words words words words words words words words words words words words.</p>
+        <p>Words words words words words words words words words words words words.</p>
     </article>
 
     <article>
         <h2>Two Column Right Side</h2>
-        <p>Words words words words Words words words words Words words words words Words words words words.</p>
-        <p>Words words words words Words words words words Words words words words Words words words words.</p>
+        <p>Words words words words words words words words words words words words.</p>
+        <p>Words words words words words words words words  words words words words.</p>
     </article>
 
     <head>
         <div class="hero-image">
             <div class="hero-text">
                 <h3>Our Services</h3>
-                <p>Words words words words words.</p>
+                <p>Words words words words words words words words words words words words words.</p>
             </div>
         </div>
     </head>
 
     <section>
         <h2>Column One</h2>
-        <p>Words words words words Words words words words Words words</p>
+        <p>Words words words words words words words words words words words words words words.</p>
         
         <h2>Column Two</h2>
-        <p>Words words words words Words words words words Words words</p>
+        <p>Words words words words words words words words words words words words words words.</p>
         <button type="button">Read it</button>
 
         <h2>Column Three</h2>
-        <p>Words words words words Words words words words Words words</p>
+        <p>Words words words words words words words words words words words words words words.</p>
 
         <h2>Column Four</h2>
-        <p>Words words words words Words words words words Words words</p>
+        <p>Words words words words words words words words words words words words words words.</p>
         <button type="button">Details</button>
     </section>
 
     <h2>One Big Column</h2>
-    <p>Words words words words Words words words words Words words words words Words words words words.</p>
-    <p>Words words words words Words words words words Words words words words Words words words words.</p>
-    
+    <p>Words words words words Words words words words Words words words words words words words words.</p>
+    <p>Words words words words Words words words words Words words words words words words words words.</p>
+    <button type="button">Read more</button>
+
+    <h3>Contact us</h3>
+    <p>Words words words words words words words words words words words</p>
+    <p>Name</p>
+    <p>Email</p>
+    <p>Subject</p>
+    <p>Your message</p>
+    <button type="button">Send</button>
+
+    <footer>
+        <h3>Footer</h3>
+        <p>Footer into</p>
+    </footer>
     </body>
 </html>
