--- a/Webdesign.html
+++ b/Webdesign.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Webdesign</title>
-    <link rel="stylesheet" href="flex.css">
+    <link rel="stylesheet" href="Webdesign.css">
 </head>
 
-<body id="webdesign-css">
+<body class="body" id="webdesign-css">
 <div class="page-wrapper">
 
 <div class="links" id="links-webdesign">
 <header>
     <h1>
         <ul>
-            <li class="homepage" title="Homepage">Homepage</li>
+            <li class="homepage" title="homepage">Homepage</li>
             <li class="about-us" title="about us">About Us</li>
             <li class="services" title="services">Services</li>
             <li class="contact" title="contact">Contact</li>
