--- a/Webdesign.html
+++ b/Webdesign.html
@@ -26,42 +26,49 @@
 </header>
 </div>
 
+<div class="the-first-hero" id="firstHero-webdesign">
 <div class="hero-image">
         <div class="hero-text">
             <h1>Hero Text</h1>
             <p>Branding statement here</p>
         </div>
 </div>
+</div>
 
 <div class="headline-trio" id="headlineTrio-webdesign">
 <section>
+    <div class="headline1">
     <h2>Headline</h2>
     <p>Words words words words words words words words words words.</p>
-    <button type="button">Button green</button>
+    <button type="button">Button green</button></div>
 
+    <div class="headline2">
     <h2>Headline</h2>
     <p>Words words words words words words words words words words words.</p>
-    <button type="button">See details</button>
+    <button type="button">See details</button></div>
 
+    <div class="headline3">
     <h2>Headline</h2>
-    <p>Words words words words  words words words words.</p>
-    <button type="button">Button red</button>
+    <p>Words words words words  words words words words words words words.</p>
+    <button type="button">Button red</button></div>
 </section>
 </div>
 
 <div class="twin-columns" id="twinColumns-webdesign">
 <section>
+    <div class="twin1">
     <article>
         <h2>Two Column Left Side</h2>
         <p>Words words words words words words words words words words words words.</p>
         <p>Words words words words words words words words words words words words.</p>
-    </article>
+    </article></div>
 
+    <div class="twin2">
     <article>
         <h2>Two Column Right Side</h2>
         <p>Words words words words words words words words words words words words.</p>
         <p>Words words words words words words words words  words words words words.</p>
-    </article>
+    </article></div>
 </section>
 </div>
 
@@ -78,19 +85,23 @@
 
 <div class="the-columns" id="columns-webdesign">
     <section>
+        <div class="column12">
         <h2>Column One</h2>
-        <p>Words words words words words words words words words words words words words words.</p>
-        
+        <p>Words words words words words words words words words words words words words words.</p></div>
+
+        <div class="column13">
         <h2>Column Two</h2>
         <p>Words words words words words words words words words words words words words words.</p>
-        <button type="button">Read it</button>
+        <button type="button">Read it</button></div>
 
+        <div class="column14">
         <h2>Column Three</h2>
-        <p>Words words words words words words words words words words words words words words.</p>
+        <p>Words words words words words words words words words words words words words words.</p></div>
 
+        <div class="column15">
         <h2>Column Four</h2>
         <p>Words words words words words words words words words words words words words words.</p>
-        <button type="button">Details</button>
+        <button type="button">Details</button></div>
     </section>
 </div>
 
