--- a/Webdesign.html
+++ b/Webdesign.html
@@ -15,7 +15,7 @@
 <div class="links" id="links-webdesign">
 <header>
     <h1>
-        <ul>
+        <ul class="ul1">
             <li class="homepage" title="homepage">Homepage</li>
             <li class="about-us" title="about us">About Us</li>
             <li class="services" title="services">Services</li>
@@ -56,13 +56,16 @@
 
 <div class="twin-columns" id="twinColumns-webdesign">
 <section>
+    
     <div class="twin1">
+        <img src="img4.jpg" alt="coffee steam">
     <article>
         <h2>Two Column Left Side</h2>
         <p>Words words words words words words words words words words words words.</p>
         <p>Words words words words words words words words words words words words.</p>
     </article></div>
 
+    <img src="img5.jpg" alt="sunset">
     <div class="twin2">
     <article>
         <h2>Two Column Right Side</h2>
