--- a/Webdesign.html
+++ b/Webdesign.html
@@ -38,16 +38,19 @@
 <div class="headline-trio" id="headlineTrio-webdesign">
 <section>
     <div class="headline1">
+        <img src="img1.jpg" alt="colorful trees">
     <h2>Headline</h2>
     <p>Words words words words words words words words words words.</p>
     <button type="button">Button green</button></div>
 
     <div class="headline2">
+        <img src="img2.jpg" alt="cityscape">
     <h2>Headline</h2>
     <p>Words words words words words words words words words words words.</p>
     <button type="button">See details</button></div>
 
     <div class="headline3">
+        <img src="img3.jpg" alt="green scenary">
     <h2>Headline</h2>
     <p>Words words words words  words words words words words words words.</p>
     <button type="button">Button red</button></div>
@@ -65,8 +68,8 @@
         <p>Words words words words words words words words words words words words.</p>
     </article></div>
 
-    <img src="img5.jpg" alt="sunset">
     <div class="twin2">
+        <img src="img5.jpg" alt="sunset">
     <article>
         <h2>Two Column Right Side</h2>
         <p>Words words words words words words words words words words words words.</p>
@@ -89,19 +92,23 @@
 <div class="the-columns" id="columns-webdesign">
     <section>
         <div class="column12">
+            <img src="img6.jpg" alt="green lake">
         <h2>Column One</h2>
         <p>Words words words words words words words words words words words words words words.</p></div>
 
         <div class="column13">
+            <img src="img7.jpg" alt="ice mountain">
         <h2>Column Two</h2>
         <p>Words words words words words words words words words words words words words words.</p>
         <button type="button">Read it</button></div>
 
         <div class="column14">
+            <img src="img8.jpg" alt="orange ocean">
         <h2>Column Three</h2>
         <p>Words words words words words words words words words words words words words words.</p></div>
 
         <div class="column15">
+            <img src="img9.jpg" alt="fall leaves">
         <h2>Column Four</h2>
         <p>Words words words words words words words words words words words words words words.</p>
         <button type="button">Details</button></div>
@@ -110,6 +117,7 @@
 
 <div class="the-big-column" id="bigColumn-websdesign">
 <article>
+    <img src="img10.jpg" alt="ocean">
     <h2>One Big Column</h2>
     <p>Words words words words Words words words words Words words words words words words words words.</p>
     <p>Words words words words Words words words words Words words words words words words words words.</p>
